# kcatta

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARK.md  docker-compose.yml
agent/: .dockerignore  .gitignore  Cargo.toml  README.md
agent/crates/: README.md
agent/crates/agent/: Cargo.toml  README.md
agent/crates/agentd/: Cargo.toml  README.md
agent/crates/cli-common/: Cargo.toml  README.md
agent/crates/collect/: README.md
agent/crates/contract/: Cargo.toml  README.md
agent/crates/detect/: Cargo.toml  README.md
agent/crates/ebpf/: Cargo.toml
agent/crates/ebpf-common/: Cargo.toml
agent/crates/flow/: Cargo.toml  README.md
agent/crates/guard/: Cargo.toml  README.md  build.rs
agent/crates/guard-ebpf/: Cargo.toml
agent/crates/host/: Cargo.toml  README.md
agent/crates/ingest/: Cargo.toml  README.md
agent/crates/respond/: Cargo.toml  README.md  build.rs
agent/crates/runtime/: Cargo.toml  README.md
agent/crates/trace/: Cargo.toml  README.md  build.rs
agent/crates/trace-ebpf/: Cargo.toml
agent/docs/: ARCHITECTURE.md  CONTRIBUTING.md  REFACTOR-PIPELINE.md  WINDOWS-RUNTIME-DETECTION.md  WINDOWS-SUPPORT.md
agent/examples/: agentd.run.json
agent/scripts/: check-soc-boundaries.sh
analyzer/: Dockerfile  README.md  openapi.json  pyproject.toml
analyzer/schemas-json/: Alert.schema.json  AssetReport.schema.json  AttackPath.schema.json  CapabilityGraph.schema.json  DetectionResult.schema.json  FlowBatch.schema.json  GuardEventBatch.schema.json  MdvmVulnerabilityBatch.schema.json  README.md  TraceBatch.schema.json
analyzer/scripts/: export_openapi.py  export_schemas.py
analyzer/src/analyzer/: __init__.py  cli.py  logging_config.py  metrics.py  scoring.py
analyzer/tests/: conftest.py  test_alerts_lifecycle.py  test_api.py  test_cli.py  test_correlate.py  test_correlate_guard.py  test_credentials.py  test_cvss.py  test_debian_tracker.py  test_debversion.py  test_deploy.py  test_deploy_session.py  test_deploy_winrm.py  test_detect.py  test_detect_api.py  test_export_alerts.py  test_ingest_idempotency.py  test_ingest_queue.py  test_local_scan.py  test_logging.py  test_mde_ingest.py  test_mdvm_ingest.py  test_migrate.py  test_openapi.py  test_osv_store.py  test_osv_sync.py  test_predict.py  test_ready_metrics.py  test_report_projection_cache.py  test_reports_pagination.py  test_scan_modes_and_guard.py  test_scans_lifecycle.py  test_schemas.py  test_scoring.py  test_storage.py  test_versioning.py  test_winrm_creds.py
collector/crates/collector-cli/: Cargo.toml
collector/crates/collector-core/: Cargo.toml
collector/crates/collector-ingest/: Cargo.toml
collector/crates/collector-intel-sync/: Cargo.toml
form/: .dockerignore  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
form/schemas-json/: AgentIdentity.schema.json  Alert.schema.json  AssetReport.schema.json  AttackPath.schema.json  CapabilityGraph.schema.json  CredentialActionRequest.schema.json  CredentialInfo.schema.json  CredentialRevokeResult.schema.json  CredentialTestResult.schema.json  DetectionResult.schema.json  FlowBatch.schema.json  GuardEventBatch.schema.json  GuardLifecycleStatus.schema.json  MdeSecurityBatch.schema.json  README.md  ScanJob.schema.json  ScanTarget.schema.json  ScanTargetInput.schema.json  TraceBatch.schema.json  TriggerScanRequest.schema.json
form/scripts/: export_openapi.py  export_schemas.py
form/src/form/: __init__.py  cli.py
form/src/kcatta_form/: __init__.py  agent_identity_store.py  agent_listener_runtime.py  agent_pki.py  agent_runtime.py  analyzer_client.py  cli.py  control_state_migration.py  derived_reconciler.py  job_store.py  mde.py  mdvm.py  metrics.py  mtls_protocol.py  provenance.py  public_url.py  scan_artifacts.py  scan_worker.py  schedule_store.py  schedule_worker.py  schema_export.py  storage.py  telemetry_chunks.py
form/tests/: conftest.py  test_agent_identity_api.py  test_agent_identity_store.py  test_agent_listener_runtime.py  test_agent_mtls_listener.py  test_agent_pki.py  test_agent_runtime.py  test_api.py  test_artifact_limits.py  test_control_state_migration.py  test_correlate.py  test_credentials.py  test_cvss.py  test_debversion.py  test_defender.py  test_deploy.py  test_deploy_session.py  test_deploy_winrm.py  test_derived_reconciler.py  test_detect.py  test_detect_api.py  test_edge_limits.py  test_job_store.py  test_local_scan.py  test_mde.py  test_mdvm.py  test_migrate.py  test_mtls_protocol.py  test_predict.py  test_provenance.py  test_scan_api_durable.py  test_scan_artifacts.py  test_scan_modes_and_guard.py  test_scans_lifecycle.py  test_schedules.py  test_schema_export.py  test_schemas.py  test_ssh_trust.py  test_storage.py  test_telemetry_chunks.py  (+2 more)
fusion/: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
fusion/crates/: README.md
fusion/crates/contract/: Cargo.toml  README.md
fusion/crates/flow/: Cargo.toml  README.md
fusion/crates/fusion-asset/: Cargo.toml  README.md
fusion/crates/fusion-contract/: README.md
fusion/crates/fusion-flow/: Cargo.toml  README.md
fusion/crates/fusion-flow-cli/: Cargo.toml  README.md
fusion/crates/fusion-host-cli/: Cargo.toml  README.md
fusion/docs/: ARCHITECTURE.md  CONTRIBUTING.md
fusion/schemas-json/: Alert.schema.json  AssetReport.schema.json  AttackPath.schema.json  CapabilityGraph.schema.json  DetectionResult.schema.json  FlowBatch.schema.json  GuardEventBatch.schema.json  README.md
fusion/scripts/: export_schemas.py
fusion/tests/: test_api.py  test_correlate.py  test_cvss.py  test_debversion.py  test_deploy.py  test_detect.py  test_detect_api.py  test_migrate.py  test_predict.py  test_schemas.py  test_storage.py  test_versioning.py
probe/: .gitignore  Cargo.toml  README.md
probe/crates/: README.md
probe/docs/: ARCHITECTURE.md  CONTRIBUTING.md
scanner/: .gitignore  Cargo.toml  README.md
scanner/crates/: README.md
scanner/docs/: ARCHITECTURE.md  CONTRIBUTING.md
(+846 files in other folders)
