[workspace]
resolver = "2"
members = [
    # Shared base: the data contract (zero internal deps).
    "crates/contract",   # data contract: AssetReport + TraceBatch + GuardEventBatch
    # Detect layer (pipeline refactor P0/P2): engines reused by collect/respond.
    "crates/detect/malware", # agent-detect-malware: signature/hash scanner
    "crates/detect",         # agent-detect: posture / secrets (+ re-export malware)
    # Collect layer: agent-collect-host / agent-collect-trace.
    "crates/collect/host",   # agent-collect-host: host assets + detect-phase orchestration
    "crates/collect/trace",  # agent-collect-trace: capture + intel-sync (+ optional eBPF)
    # Respond layer: agent-respond.
    "crates/respond",        # agent-respond: real-time protection (detect + respond + report)
    # Umbrella: the single `agentd` binary — aggregates the three CLIs AND owns ingest (upload).
    "crates/agentd",         # agentd: `agentd collect-host|collect-trace|respond`; `--upload` posts to Form
    # eBPF support: ONE crate with a shared-POD-types lib (Apache-2.0, host-buildable,
    # used by the userspace loaders) + the trace-ebpf/guard-ebpf kernel programs as
    # bpf-target-only bins (GPL-2.0). Kept out of `default-members` so host
    # `cargo build`/`test` never compile the bins (gated behind
    # `required-features = ["ebpf"]`); the loaders depend only on its lib.
    "crates/ebpf",
]
# Host toolchain builds/tests everything EXCEPT the bpf-target-only ebpf bins.
default-members = [
    "crates/contract",
    "crates/detect/malware",
    "crates/detect",
    "crates/collect/host",
    "crates/collect/trace",
    "crates/respond",
    "crates/agentd",
]

# kcatta agent workspace — host + network telemetry collection.
# See README.md and docs/ARCHITECTURE.md.
[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/jinziyou/kcatta"
rust-version = "1.96"  # rusqlite 0.40 / libsqlite3-sys 0.38 use cfg_select (stable since rustc 1.96)

# Shared third-party dependencies. Per-crate manifests pin the version here and
# only add the features they need (features are additive across the workspace).
[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
jsonschema = "0.48.1"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.25.0"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
