[project]
name = "kcatta-analyzer"
version = "0.1.0"
description = "Kcatta data analysis & situational awareness platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "kcatta maintainers" }]
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "packaging>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
analyzer-export-schemas = "analyzer.cli:export_schemas_main"
analyzer-export-openapi = "analyzer.cli:export_openapi_main"
analyzer-api = "analyzer.cli:api_main"
analyzer-osv-sync = "analyzer.cli:osv_sync_main"
analyzer-detect = "analyzer.cli:detect_main"
analyzer-migrate-storage = "analyzer.cli:migrate_storage_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
