[project]
name = "kcatta-form"
version = "0.1.0"
description = "Kcatta control plane and component orchestration boundary"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "cryptography>=44",
    "fastapi>=0.115",
    "httpx>=0.27",
    "kcatta-analyzer",
    "paramiko>=3",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
winrm = ["pywinrm>=0.4"]

[project.scripts]
form-api = "kcatta_form.cli:api_main"
form-agent-api = "kcatta_form.cli:agent_api_main"
form-migrate-control-state = "kcatta_form.cli:migrate_control_state_main"
form-export-openapi = "kcatta_form.schema_export:export_openapi_main"
form-export-schemas = "kcatta_form.schema_export:export_schemas_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kcatta_form"]

[tool.uv.sources]
kcatta-analyzer = { path = "../analyzer", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../analyzer/src"]
addopts = "-ra"
