[workspace]
resolver = "2"
members = [
    # shared infrastructure
    "crates/fusion-contract",
    "crates/fusion-runtime",
    "crates/fusion-ingest",
    # host domain (inward-looking): static asset + malware scanning
    "crates/fusion-asset",
    "crates/fusion-malware",
    "crates/fusion-host-cli",
    "crates/fusion-remote",
    # network domain (outward-looking): flow capture + threat intel
    "crates/fusion-flow",
    "crates/fusion-intel-sync",
    "crates/fusion-flow-cli",
]

# posture fusion workspace — host + network telemetry collection.
# See README.md and docs/ARCHITECTURE.md.
[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/jinziyou/posture"

# Shared third-party dependencies. Per-crate manifests pin the version here and
# only add the features they need (features are additive across the workspace).
[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
jsonschema = "0.46.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.25.0"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
