[workspace]
resolver = "2"
members = [
    "crates/scanner-contract",
    "crates/scanner-runtime",
    "crates/scanner-asset",
    "crates/scanner-vuln",
    "crates/scanner-malware",
    "crates/scanner-ingest",
    "crates/scanner-core",
    "crates/scanner-cli",
    "crates/scanner-remote",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/jinziyou/cyber-posture"

[workspace.lints.rust]
unsafe_code = "deny"
