[workspace]
resolver = "2"
members = [
    "crates/scanner-contract",
    "crates/scanner-runtime",
    "crates/scanner-asset",
    "crates/scanner-malware",
    "crates/scanner-ingest",
    "crates/scanner-core",
    "crates/scanner-cli",
    "crates/scanner-remote",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/jinziyou/cyber-posture"

# Shared third-party dependencies. Per-crate manifests pin the version here and
# only add the features they need (features are additive across the workspace).
[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
jsonschema = "0.46.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.25.0"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"

[workspace.lints.rust]
unsafe_code = "deny"
