[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "kcatta agent 统一 CLI: aggregates the host / flow / guard capabilities into a single `agent` command"
readme = "README.md"

# Umbrella orchestrator: a convenience `agent` binary whose subcommands dispatch
# in-process to the capability libraries' `cli` modules. The three independent
# binaries (agent-host / agent-flow / agent-guard) remain the lean,
# standalone-deployable artifacts; this one is the all-in-one entry point.
[[bin]]
name = "agent"
path = "src/main.rs"

[features]
default = []
# Forward optional capability features so `agent` can do live pcap capture,
# on-access scanning, network linkage, and IDS.
pcap = ["agent-flow/pcap", "agent-guard/pcap"]
onaccess = ["agent-guard/onaccess"]
network = ["agent-guard/network"]
ids = ["agent-guard/ids"]
full = ["pcap", "onaccess", "network", "ids"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
# Ingest (upload) lives here now: only `agent <cap> --upload` talks to analyzer.
reqwest = { workspace = true, features = ["json"] }
agent-contract = { version = "0.1.0", path = "../contract" }
agent-host = { version = "0.1.0", path = "../host" }
agent-flow = { version = "0.1.0", path = "../flow" }
agent-guard = { version = "0.1.0", path = "../guard" }

[lints]
workspace = true
