[package]
name = "agentd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "kcatta agentd 统一 CLI: aggregates the host / trace / guard capabilities into a single `agentd` command"
readme = "README.md"

# Umbrella orchestrator: a convenience `agentd` binary whose subcommands dispatch
# in-process to the capability libraries' `cli` modules. The three independent
# binaries (agent-host / agent-trace / agent-guard) remain the lean,
# standalone-deployable artifacts; this one is the all-in-one entry point.
[[bin]]
name = "agentd"
path = "src/main.rs"

[features]
default = []
# Forward optional capability features so `agentd` can do live pcap capture,
# on-access scanning, network linkage, and IDS.
pcap = ["agent-trace/pcap", "agent-guard/pcap"]
onaccess = ["agent-guard/onaccess"]
network = ["agent-guard/network"]
ids = ["agent-guard/ids"]
full = ["pcap", "onaccess", "network", "ids"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
# `agentd run` parses a JSON orchestration config; ctrlc gives graceful shutdown.
serde_json = { workspace = true }
ctrlc = "3.4"
# Ingest (upload) lives here now: only `agentd <cap> --upload` talks to analyzer.
reqwest = { workspace = true, features = ["json"] }
agent-contract = { version = "0.1.0", path = "../contract" }
agent-host = { version = "0.1.0", path = "../host" }
agent-trace = { version = "0.1.0", path = "../trace" }
agent-guard = { version = "0.1.0", path = "../guard" }

[lints]
workspace = true
