[package]
name = "agentd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "kcatta agentd 统一 CLI: aggregates collect/respond capabilities into a single `agentd` command"
readme = "README.md"

# Umbrella orchestrator: a convenience `agentd` binary whose subcommands dispatch
# in-process to the capability libraries' `cli` modules. The independent
# binaries (agent-collect-host / agent-collect-trace / agent-respond) remain the
# lean, standalone-deployable artifacts; this one is the all-in-one entry point.
[[bin]]
name = "agentd"
path = "src/main.rs"

[features]
default = []
# Forward optional capability features so `agentd` can do live pcap capture,
# on-access scanning, network linkage, and IDS.
pcap = ["agent-collect-trace/pcap", "agent-respond/pcap"]
# Connection-table network backend (IP Helper on Windows / /proc on Linux). The
# Windows network capture path for `agentd run`.
winnet = ["agent-collect-trace/winnet"]
onaccess = ["agent-respond/onaccess"]
network = ["agent-respond/network"]
ids = ["agent-respond/ids"]
# Kernel eBPF backends: trace network (cgroup-skb) + file/process tracepoints, and
# respond's cgroup-connect netblock. Needs nightly + bpf-linker at build time and
# CAP_BPF at runtime; deliberately NOT in `full` (keeps `full` toolchain-free).
ebpf = ["agent-collect-trace/ebpf", "agent-respond/ebpf"]
full = ["pcap", "onaccess", "network", "ids"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
# `agentd run` parses a JSON orchestration config; ctrlc gives graceful shutdown.
serde_json = { workspace = true }
ctrlc = "3.4"
# Ingest (upload) lives here now: only `agentd <cap> --upload` talks to analyzer.
reqwest = { workspace = true, features = ["json"] }
agent-contract = { version = "0.1.0", path = "../contract" }
agent-collect-host = { version = "0.1.0", path = "../collect/host" }
agent-collect-trace = { version = "0.1.0", path = "../collect/trace" }
agent-respond = { version = "0.1.0", path = "../respond" }

[lints]
workspace = true
