[package]
name = "agent-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "kcatta agent data contract: AssetReport + TraceBatch + GuardEventBatch (Rust mirror of analyzer schemas)"

readme = "README.md"

[dependencies]
chrono = { workspace = true, features = ["serde", "clock", "std"] }
serde = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
