[package]
name = "posture-flow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "posture traffic detection: network flow capture (mock/pcap) + threat-intel IOC matching + IOC feed sync"
readme = "README.md"

# One crate per capability: the capture/IOC library (reused by the guard
# daemon's network sensor) plus the `posture-flow` binary live together.
[lib]
name = "posture_flow"
path = "src/lib.rs"

[[bin]]
name = "posture-flow"
path = "src/main.rs"

[features]
default = []
pcap = ["dep:pcap"]

[dependencies]
# Pure capture + IOC matching + feed parsing in the library (no reqwest); the
# binary adds clap + the shared CLI/ingest plumbing. md5/pcap are flow-unique.
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "std", "serde"] }
clap = { workspace = true }
md5 = "0.8.0"
pcap = { version = "2.4.0", optional = true }
agent-contract = { version = "0.1.0", path = "../contract" }
agent-ingest = { version = "0.1.0", path = "../ingest" }
agent-cli-common = { version = "0.1.0", path = "../cli-common" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
jsonschema = { workspace = true }

[lints]
workspace = true
