[package]
name = "guard-ebpf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "kcatta agent-guard eBPF blocker: cgroup connect4/6 egress deny by destination IP (kernel side)."

# Bin-only, bpf-target-only. Workspace member (so `--package guard-ebpf` resolves)
# but excluded from `default-members`; embedded into agent-guard via build.rs.
[[bin]]
name = "guard-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1.1"

[lints.rust]
# Kernel eBPF code is inherently unsafe; relax the workspace-wide deny here.
unsafe_code = "allow"
