[package]
name = "agent-guard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "kcatta real-time protection: FIM, on-access malware, behavior, network IOC, IDS + config-gated active response"
readme = "README.md"

# One crate per capability: the protection engine library + the `agent-guard`
# daemon binary live together.
[lib]
name = "agent_guard"
path = "src/lib.rs"

[[bin]]
name = "agent-guard"
path = "src/main.rs"

[features]
# Sensible Linux default: FIM + behavior run unprivileged and pull no scan/pcap deps.
default = ["fim", "behavior"]
fim = []
behavior = []
# On-access malware reuses agent-host's built-in signature scanner (fanotify
# needs CAP_SYS_ADMIN). Pulls the agent-host library only when enabled.
onaccess = ["dep:agent-host"]
# Network linkage reuses agent-flow capture + ThreatFeed IOC matcher.
network = ["dep:agent-flow"]
# Minimal built-in IDS signature engine over captured flows.
ids = ["network"]
# Real libpcap capture for the network sensor (otherwise mock flows).
pcap = ["network", "agent-flow/pcap"]
all = ["fim", "behavior", "onaccess", "network", "ids"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = "0.11.0"
agent-contract = { version = "0.1.0", path = "../contract" }
# Capability libraries reused by guard sensors, pulled only by their features.
agent-host = { version = "0.1.0", path = "../host", optional = true }
agent-flow = { version = "0.1.0", path = "../flow", optional = true }

# Linux syscall surface (fanotify / inotify / signalfd / kill) via the vetted,
# safe `nix` wrappers — keeps the workspace `unsafe_code = "deny"` lint intact.
[target.'cfg(target_os = "linux")'.dependencies]
# `signal` also gates the `signalfd` module + `kill`; `fanotify`/`inotify` gate
# their sensors. All are safe wrappers (their `unsafe` is internal to nix).
nix = { version = "0.31", features = ["fanotify", "inotify", "signal"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
